@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.8
+Release: 0.9
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -505,6 +505,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Sep 16 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.9
+- add symbol versions everywhere, proof-of-concept.
+
 * Thu Sep 15 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.8
 - fix: revert to older/slower perldeps avoid getOutputFrom() error.
 - zlib: uniqify several more symbols.
