@@ -13,6 +13,7 @@
 	- remove all uses of RPMSENSE_PREREQ.
 	- fix: revert to older/slower perldeps avoid getOutputFrom() error.
 	- zlib: uniqify several more symbols.
+	- add symbol versions everywhere, proof-of-concept.
 
 4.4.1 -> 4.4.2:
 	- start 4.4.2 devel.
